JumpScript/tests/baselines/reference/parserMemberFunctionDeclarationAmbiguities1.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(2,3): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(3,3): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(5,10): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(6,10): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(8,17): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(9,17): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(11,10): error TS2393: Duplicate function implementation.
tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump(12,10): error TS2393: Duplicate function implementation.


==== tests/cases/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclarationAmbiguities1.jump (8 errors) ====
    class C {
      public() {}
      ~~~~~~
!!! error TS2393: Duplicate function implementation.
      static() {}
      ~~~~~~
!!! error TS2393: Duplicate function implementation.
    
      public public() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
      public static() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
    
      public static public() {}
                    ~~~~~~
!!! error TS2393: Duplicate function implementation.
      public static static() {}
                    ~~~~~~
!!! error TS2393: Duplicate function implementation.
      
      static public() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
      static static() {}
             ~~~~~~
!!! error TS2393: Duplicate function implementation.
    }